--- a/galery.html
+++ b/galery.html
@@ -803,6 +803,313 @@
                 </div>
             </div>
         </div>
+        <!-- N  -->
+        <div class="row col-12 col-md-4">
+            <div class="pswp-gallery__item">
+                <a href="img/galeria/sin_texto/img_1.jpeg" data-pswp-width="2500" data-pswp-height="1668"
+                    target="_blank">
+                    <img src="img/galeria/sin_texto/img_1.jpeg"/>
+                </a>
+            </div>
+        </div>
+
+        <div class="row col-12 col-md-4">
+            <div class="pswp-gallery__item">
+                <a href="img/galeria/sin_texto/img_2.jpeg" data-pswp-width="2500" data-pswp-height="1668"
+                    target="_blank">
+                    <img src="img/galeria/sin_texto/img_2.jpeg"/>
+                </a>
+            </div>
+        </div>
+
+        <div class="row col-12 col-md-4">
+            <div class="pswp-gallery__item">
+                <a href="img/galeria/sin_texto/img_3.jpeg" data-pswp-width="2500" data-pswp-height="1668"
+                    target="_blank">
+                    <img src="img/galeria/sin_texto/img_3.jpeg"/>
+                </a>
+            </div>
+        </div>
+
+        <div class="row col-12 col-md-4">
+            <div class="pswp-gallery__item">
+                <a href="img/galeria/sin_texto/img_4.jpeg" data-pswp-width="2500" data-pswp-height="1668"
+                    target="_blank">
+                    <img src="img/galeria/sin_texto/img_4.jpeg"/>
+                </a>
+            </div>
+        </div>
+
+        <div class="row col-12 col-md-4">
+            <div class="pswp-gallery__item">
+                <a href="img/galeria/sin_texto/img_5.jpeg" data-pswp-width="2500" data-pswp-height="1668"
+                    target="_blank">
+                    <img src="img/galeria/sin_texto/img_5.jpeg"/>
+                </a>
+            </div>
+        </div>
+
+        <div class="row col-12 col-md-4">
+            <div class="pswp-gallery__item">
+                <a href="img/galeria/sin_texto/img_6.jpeg" data-pswp-width="2500" data-pswp-height="1668"
+                    target="_blank">
+                    <img src="img/galeria/sin_texto/img_6.jpeg"/>
+                </a>
+            </div>
+        </div>
+
+        <div class="row col-12 col-md-4">
+            <div class="pswp-gallery__item">
+                <a href="img/galeria/sin_texto/img_7.jpeg" data-pswp-width="2500" data-pswp-height="1668"
+                    target="_blank">
+                    <img src="img/galeria/sin_texto/img_7.jpeg"/>
+                </a>
+            </div>
+        </div>
+
+        <div class="row col-12 col-md-4">
+            <div class="pswp-gallery__item">
+                <a href="img/galeria/sin_texto/img_8.jpeg" data-pswp-width="2500" data-pswp-height="1668"
+                    target="_blank">
+                    <img src="img/galeria/sin_texto/img_8.jpeg"/>
+                </a>
+            </div>
+        </div>
+
+        <div class="row col-12 col-md-4">
+            <div class="pswp-gallery__item">
+                <a href="img/galeria/sin_texto/img_9.jpeg" data-pswp-width="2500" data-pswp-height="1668"
+                    target="_blank">
+                    <img src="img/galeria/sin_texto/img_9.jpeg"/>
+                </a>
+            </div>
+        </div>
+
+        <div class="row col-12 col-md-4">
+            <div class="pswp-gallery__item">
+                <a href="img/galeria/sin_texto/img_10.jpeg" data-pswp-width="2500" data-pswp-height="1668"
+                    target="_blank">
+                    <img src="img/galeria/sin_texto/img_10.jpeg"/>
+                </a>
+            </div>
+        </div>
+
+        <div class="row col-12 col-md-4">
+            <div class="pswp-gallery__item">
+                <a href="img/galeria/sin_texto/img_11.jpeg" data-pswp-width="2500" data-pswp-height="1668"
+                    target="_blank">
+                    <img src="img/galeria/sin_texto/img_11.jpeg"/>
+                </a>
+            </div>
+        </div>
+
+        <div class="row col-12 col-md-4">
+            <div class="pswp-gallery__item">
+                <a href="img/galeria/sin_texto/img_12.jpeg" data-pswp-width="2500" data-pswp-height="1668"
+                    target="_blank">
+                    <img src="img/galeria/sin_texto/img_12.jpeg"/>
+                </a>
+            </div>
+        </div>
+
+        <div class="row col-12 col-md-4">
+            <div class="pswp-gallery__item">
+                <a href="img/galeria/sin_texto/img_13.jpeg" data-pswp-width="2500" data-pswp-height="1668"
+                    target="_blank">
+                    <img src="img/galeria/sin_texto/img_13.jpeg"/>
+                </a>
+            </div>
+        </div>
+
+        <div class="row col-12 col-md-4">
+            <div class="pswp-gallery__item">
+                <a href="img/galeria/sin_texto/img_14.jpeg" data-pswp-width="2500" data-pswp-height="1668"
+                    target="_blank">
+                    <img src="img/galeria/sin_texto/img_14.jpeg"/>
+                </a>
+            </div>
+        </div>
+
+        <div class="row col-12 col-md-4">
+            <div class="pswp-gallery__item">
+                <a href="img/galeria/sin_texto/img_15.jpeg" data-pswp-width="2500" data-pswp-height="1668"
+                    target="_blank">
+                    <img src="img/galeria/sin_texto/img_15.jpeg"/>
+                </a>
+            </div>
+        </div>
+
+        <div class="row col-12 col-md-4">
+            <div class="pswp-gallery__item">
+                <a href="img/galeria/sin_texto/img_16.jpeg" data-pswp-width="2500" data-pswp-height="1668"
+                    target="_blank">
+                    <img src="img/galeria/sin_texto/img_16.jpeg"/>
+                </a>
+            </div>
+        </div>
+
+        <div class="row col-12 col-md-4">
+            <div class="pswp-gallery__item">
+                <a href="img/galeria/sin_texto/img_17.jpeg" data-pswp-width="2500" data-pswp-height="1668"
+                    target="_blank">
+                    <img src="img/galeria/sin_texto/img_17.jpeg"/>
+                </a>
+            </div>
+        </div>
+
+        <div class="row col-12 col-md-4">
+            <div class="pswp-gallery__item">
+                <a href="img/galeria/sin_texto/img_18.jpeg" data-pswp-width="2500" data-pswp-height="1668"
+                    target="_blank">
+                    <img src="img/galeria/sin_texto/img_18.jpeg"/>
+                </a>
+            </div>
+        </div>
+
+        <div class="row col-12 col-md-4">
+            <div class="pswp-gallery__item">
+                <a href="img/galeria/sin_texto/img_19.jpeg" data-pswp-width="2500" data-pswp-height="1668"
+                    target="_blank">
+                    <img src="img/galeria/sin_texto/img_19.jpeg"/>
+                </a>
+            </div>
+        </div>
+
+        <div class="row col-12 col-md-4">
+            <div class="pswp-gallery__item">
+                <a href="img/galeria/sin_texto/img_20.jpeg" data-pswp-width="2500" data-pswp-height="1668"
+                    target="_blank">
+                    <img src="img/galeria/sin_texto/img_20.jpeg"/>
+                </a>
+            </div>
+        </div>
+
+        <div class="row col-12 col-md-4">
+            <div class="pswp-gallery__item">
+                <a href="img/galeria/sin_texto/img_21.jpeg" data-pswp-width="2500" data-pswp-height="1668"
+                    target="_blank">
+                    <img src="img/galeria/sin_texto/img_21.jpeg"/>
+                </a>
+            </div>
+        </div>
+
+        <div class="row col-12 col-md-4">
+            <div class="pswp-gallery__item">
+                <a href="img/galeria/sin_texto/img_22.jpeg" data-pswp-width="2500" data-pswp-height="1668"
+                    target="_blank">
+                    <img src="img/galeria/sin_texto/img_22.jpeg"/>
+                </a>
+            </div>
+        </div>
+
+        <div class="row col-12 col-md-4">
+            <div class="pswp-gallery__item">
+                <a href="img/galeria/sin_texto/img_23.jpeg" data-pswp-width="2500" data-pswp-height="1668"
+                    target="_blank">
+                    <img src="img/galeria/sin_texto/img_23.jpeg"/>
+                </a>
+            </div>
+        </div>
+
+        <div class="row col-12 col-md-4">
+            <div class="pswp-gallery__item">
+                <a href="img/galeria/sin_texto/img_24.jpeg" data-pswp-width="2500" data-pswp-height="1668"
+                    target="_blank">
+                    <img src="img/galeria/sin_texto/img_24.jpeg"/>
+                </a>
+            </div>
+        </div>
+
+        <div class="row col-12 col-md-4">
+            <div class="pswp-gallery__item">
+                <a href="img/galeria/sin_texto/img_25.jpeg" data-pswp-width="2500" data-pswp-height="1668"
+                    target="_blank">
+                    <img src="img/galeria/sin_texto/img_25.jpeg"/>
+                </a>
+            </div>
+        </div>
+
+        <div class="row col-12 col-md-4">
+            <div class="pswp-gallery__item">
+                <a href="img/galeria/sin_texto/img_26.jpeg" data-pswp-width="2500" data-pswp-height="1668"
+                    target="_blank">
+                    <img src="img/galeria/sin_texto/img_26.jpeg"/>
+                </a>
+            </div>
+        </div>
+
+        <div class="row col-12 col-md-4">
+            <div class="pswp-gallery__item">
+                <a href="img/galeria/sin_texto/img_27.jpeg" data-pswp-width="2500" data-pswp-height="1668"
+                    target="_blank">
+                    <img src="img/galeria/sin_texto/img_27.jpeg"/>
+                </a>
+            </div>
+        </div>
+
+        <div class="row col-12 col-md-4">
+            <div class="pswp-gallery__item">
+                <a href="img/galeria/sin_texto/img_28.jpeg" data-pswp-width="2500" data-pswp-height="1668"
+                    target="_blank">
+                    <img src="img/galeria/sin_texto/img_28.jpeg"/>
+                </a>
+            </div>
+        </div>
+
+        <div class="row col-12 col-md-4">
+            <div class="pswp-gallery__item">
+                <a href="img/galeria/sin_texto/img_29.jpeg" data-pswp-width="2500" data-pswp-height="1668"
+                    target="_blank">
+                    <img src="img/galeria/sin_texto/img_29.jpeg"/>
+                </a>
+            </div>
+        </div>
+
+        <div class="row col-12 col-md-4">
+            <div class="pswp-gallery__item">
+                <a href="img/galeria/sin_texto/img_30.jpeg" data-pswp-width="2500" data-pswp-height="1668"
+                    target="_blank">
+                    <img src="img/galeria/sin_texto/img_30.jpeg"/>
+                </a>
+            </div>
+        </div>
+
+        <div class="row col-12 col-md-4">
+            <div class="pswp-gallery__item">
+                <a href="img/galeria/sin_texto/img_31.jpeg" data-pswp-width="2500" data-pswp-height="1668"
+                    target="_blank">
+                    <img src="img/galeria/sin_texto/img_31.jpeg"/>
+                </a>
+            </div>
+        </div>
+
+        <div class="row col-12 col-md-4">
+            <div class="pswp-gallery__item">
+                <a href="img/galeria/sin_texto/img_32.jpeg" data-pswp-width="2500" data-pswp-height="1668"
+                    target="_blank">
+                    <img src="img/galeria/sin_texto/img_32.jpeg"/>
+                </a>
+            </div>
+        </div>
+
+        <div class="row col-12 col-md-4">
+            <div class="pswp-gallery__item">
+                <a href="img/galeria/sin_texto/img_33.jpeg" data-pswp-width="2500" data-pswp-height="1668"
+                    target="_blank">
+                    <img src="img/galeria/sin_texto/img_33.jpeg"/>
+                </a>
+            </div>
+        </div>
+
+        <div class="row col-12 col-md-4">
+            <div class="pswp-gallery__item">
+                <a href="img/galeria/sin_texto/img_34.jpeg" data-pswp-width="2500" data-pswp-height="1668"
+                    target="_blank">
+                    <img src="img/galeria/sin_texto/img_34.jpeg"/>
+                </a>
+            </div>
+        </div>
+
     </div>
     <button type="button" class="irAbajo">
         <i class="fa fa-arrow-down" aria-hidden="true"></i>
