--- a/index.html
+++ b/index.html
@@ -1179,6 +1179,54 @@
                             </blockquote>
                         </div>
                     </div>
+                    <div class="col-12 col-md-6 col-lg-4 mx-auto">
+                        <div 
+                        class="fb-page" 
+                        data-href="https://www.facebook.com/palapascabanasriomar"
+                        data-tabs="timeline" 
+                        data-width=""
+                        data-height="" 
+                        data-small-header="false"
+                        data-adapt-container-width="true" 
+                        data-hide-cover="false" 
+                        data-show-facepile="true">
+                            <blockquote cite="https://www.facebook.com/palapascabanasriomar" class="fb-xfbml-parse-ignore">
+                                <a href="https://www.facebook.com/palapascabanasriomar">Palapas y Cabañas RioMar</a>
+                            </blockquote>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4 mx-auto">
+                        <div 
+                        class="fb-page" 
+                        data-href="https://www.facebook.com/estructurasconcretolzc"
+                        data-tabs="timeline" 
+                        data-width=""
+                        data-height="" 
+                        data-small-header="false"
+                        data-adapt-container-width="true" 
+                        data-hide-cover="false" 
+                        data-show-facepile="true">
+                            <blockquote cite="https://www.facebook.com/estructurasconcretolzc" class="fb-xfbml-parse-ignore">
+                                <a href="https://www.facebook.com/estructurasconcretolzc">Estructuras de Concreto</a>
+                            </blockquote>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4 mx-auto">
+                        <div 
+                        class="fb-page" 
+                        data-href="https://www.facebook.com/micasaproyectos"
+                        data-tabs="timeline" 
+                        data-width=""
+                        data-height="" 
+                        data-small-header="false"
+                        data-adapt-container-width="true" 
+                        data-hide-cover="false" 
+                        data-show-facepile="true">
+                            <blockquote cite="https://www.facebook.com/micasaproyectos" class="fb-xfbml-parse-ignore">
+                                <a href="https://www.facebook.com/micasaproyectos">Mi Casa Mantenimiento y Remodelación</a>
+                            </blockquote>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-12 col-md-4 d-block mb-md-4 mb-lg-0">
                     <h4 class="text-center text-uppercase">
