--- a/galery.html
+++ b/galery.html
@@ -1369,40 +1369,146 @@
                         <hr class="w-auto">
                     </h4>
                     <div class="col-12 col-md-6 col-lg-4">
-                        <div class="fb-page w-100" data-href="https://www.facebook.com/AlbercasDelMarLC"
-                            data-tabs="timeline" data-width="" data-height="" data-small-header="false"
-                            data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true">
+                        <div 
+                        class="fb-page w-100" 
+                        data-href="https://www.facebook.com/AlbercasDelMarLC"
+                        data-tabs="timeline" 
+                        data-width=""
+                        data-height="" 
+                        data-small-header="false"
+                        data-adapt-container-width="true" 
+                        data-hide-cover="false" 
+                        data-show-facepile="true">
                             <blockquote cite="https://www.facebook.com/AlbercasDelMarLC/" class="fb-xfbml-parse-ignore">
                                 <a href="https://www.facebook.com/AlbercasDelMarLC/">Albercas del mar</a>
                             </blockquote>
                         </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
-                        <div class="fb-page" data-href="https://www.facebook.com/ConstructoraRioMarLZC"
-                            data-tabs="timeline" data-width="" data-height="" data-small-header="false"
-                            data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true">
-                            <blockquote cite="https://www.facebook.com/ConstructoraRioMarLZC/"
-                                class="fb-xfbml-parse-ignore">
+                        <div 
+                        class="fb-page" 
+                        data-href="https://www.facebook.com/ConstructoraRioMarLZC"
+                        data-tabs="timeline" 
+                        data-width=""
+                        data-height="" 
+                        data-small-header="false"
+                        data-adapt-container-width="true" 
+                        data-hide-cover="false" 
+                        data-show-facepile="true">
+                            <blockquote cite="https://www.facebook.com/ConstructoraRioMarLZC/" class="fb-xfbml-parse-ignore">
                                 <a href="https://www.facebook.com/ConstructoraRioMarLZC/">Constructora RioMar</a>
                             </blockquote>
                         </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
-                        <div class="fb-page" data-href="https://www.facebook.com/pozosdeaguahl" data-tabs="timeline"
-                            data-width="" data-height="" data-small-header="false" data-adapt-container-width="true"
-                            data-hide-cover="false" data-show-facepile="true">
+                        <div 
+                        class="fb-page" 
+                        data-href="https://www.facebook.com/pozosdeaguahl"
+                        data-tabs="timeline" 
+                        data-width=""
+                        data-height="" 
+                        data-small-header="false"
+                        data-adapt-container-width="true" 
+                        data-hide-cover="false" 
+                        data-show-facepile="true">
                             <blockquote cite="https://www.facebook.com/pozosdeaguahl" class="fb-xfbml-parse-ignore">
                                 <a href="https://www.facebook.com/pozosdeaguahl">Pozos de agua</a>
                             </blockquote>
                         </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4 mx-auto">
-                        <div class="fb-page" data-href="https://www.facebook.com/LimpiezaFumigacioneslzc"
-                            data-tabs="timeline" data-width="" data-height="" data-small-header="false"
-                            data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true">
-                            <blockquote cite="https://www.facebook.com/LimpiezaFumigacioneslzc"
-                                class="fb-xfbml-parse-ignore">
+                        <div 
+                        class="fb-page" 
+                        data-href="https://www.facebook.com/LimpiezaFumigacioneslzc"
+                        data-tabs="timeline" 
+                        data-width=""
+                        data-height="" 
+                        data-small-header="false"
+                        data-adapt-container-width="true" 
+                        data-hide-cover="false" 
+                        data-show-facepile="true">
+                            <blockquote cite="https://www.facebook.com/LimpiezaFumigacioneslzc" class="fb-xfbml-parse-ignore">
                                 <a href="https://www.facebook.com/LimpiezaFumigacioneslzc">Master limpieza</a>
+                            </blockquote>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4 mx-auto">
+                        <div 
+                        class="fb-page" 
+                        data-href="https://www.facebook.com/ingelectricohl"
+                        data-tabs="timeline" 
+                        data-width=""
+                        data-height="" 
+                        data-small-header="false"
+                        data-adapt-container-width="true" 
+                        data-hide-cover="false" 
+                        data-show-facepile="true">
+                            <blockquote cite="https://www.facebook.com/ingelectricohl" class="fb-xfbml-parse-ignore">
+                                <a href="https://www.facebook.com/ingelectricohl">Servicios de Ingeniería Eléctrica HL</a>
+                            </blockquote>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4 mx-auto">
+                        <div 
+                        class="fb-page" 
+                        data-href="https://www.facebook.com/palapascabanasriomar"
+                        data-tabs="timeline" 
+                        data-width=""
+                        data-height="" 
+                        data-small-header="false"
+                        data-adapt-container-width="true" 
+                        data-hide-cover="false" 
+                        data-show-facepile="true">
+                            <blockquote cite="https://www.facebook.com/palapascabanasriomar" class="fb-xfbml-parse-ignore">
+                                <a href="https://www.facebook.com/palapascabanasriomar">Palapas y Cabañas RioMar</a>
+                            </blockquote>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4 mx-auto">
+                        <div 
+                        class="fb-page" 
+                        data-href="https://www.facebook.com/estructurasconcretolzc"
+                        data-tabs="timeline" 
+                        data-width=""
+                        data-height="" 
+                        data-small-header="false"
+                        data-adapt-container-width="true" 
+                        data-hide-cover="false" 
+                        data-show-facepile="true">
+                            <blockquote cite="https://www.facebook.com/estructurasconcretolzc" class="fb-xfbml-parse-ignore">
+                                <a href="https://www.facebook.com/estructurasconcretolzc">Estructuras de Concreto</a>
+                            </blockquote>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4 mx-auto">
+                        <div 
+                        class="fb-page" 
+                        data-href="https://www.facebook.com/micasaproyectos"
+                        data-tabs="timeline" 
+                        data-width=""
+                        data-height="" 
+                        data-small-header="false"
+                        data-adapt-container-width="true" 
+                        data-hide-cover="false" 
+                        data-show-facepile="true">
+                            <blockquote cite="https://www.facebook.com/micasaproyectos" class="fb-xfbml-parse-ignore">
+                                <a href="https://www.facebook.com/micasaproyectos">Mi Casa Mantenimiento y Remodelación</a>
+                            </blockquote>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4 mx-auto">
+                        <div 
+                        class="fb-page" 
+                        data-href="https://www.facebook.com/masterlimpio341"
+                        data-tabs="timeline" 
+                        data-width=""
+                        data-height="" 
+                        data-small-header="false"
+                        data-adapt-container-width="true" 
+                        data-hide-cover="false" 
+                        data-show-facepile="true">
+                            <blockquote cite="https://www.facebook.com/masterlimpio341" class="fb-xfbml-parse-ignore">
+                                <a href="https://www.facebook.com/masterlimpio341">Sanimex</a>
                             </blockquote>
                         </div>
                     </div>
