--- a/galery.html
+++ b/galery.html
@@ -76,16 +76,26 @@
                             </div>
                             <div class="col-12 navbar-nav text-uppercase justify-content-center menu-paginas-web mb-4">
                                 <!-- Páginas web relacionadas -->
-                                <a class="nav-link p-3 redireccion-web" href="https://construriomar.com/"
-                                    target="_blank">Constructora Riomar</a>
-                                <a class="nav-link p-3 redireccion-web" href="https://palapasriomar.com/"
-                                    target="_blank">Palapas Riomar</a>
-                                <a class="nav-link p-3 redireccion-web" href="https://riomarpaisajismo.com"
-                                    target="_blank">Riomar Paisajismo</a>
-                                <a class="nav-link p-3 redireccion-web" href="https://masterlimpio.com/"
-                                    target="_blank">Máster Limpio</a>
-                                <a class="nav-link p-3 redireccion-web" href="https://pozosriomar.com"
-                                    target="_blank">Pozos Rio Mar</a>
+                                <a 
+                                class="nav-link p-3 redireccion-web" 
+                                href="https://construriomar.com/" 
+                                target="_blank">Constructora Riomar</a>
+                                <a 
+                                class="nav-link p-3 redireccion-web" 
+                                href="https://palapasriomar.com/" 
+                                target="_blank">Palapas Riomar</a>
+                                <a 
+                                class="nav-link p-3 redireccion-web" 
+                                href="https://ingenieriaelectricahl.com/" 
+                                target="_blank">Ingeniería eléctrica HL</a>
+                                <a 
+                                class="nav-link p-3 redireccion-web" 
+                                href="https://masterlimpio.com/" 
+                                target="_blank">Máster Limpio</a>
+                                <a 
+                                class="nav-link p-3 redireccion-web" 
+                                href="https://pozosriomar.com" 
+                                target="_blank">Pozos Rio Mar</a>
                             </div>
                         </div>
                     </div>
