--- a/servicios.html
+++ b/servicios.html
@@ -101,8 +101,8 @@
                                 target="_blank">Palapas Riomar</a>
                                 <a 
                                 class="nav-link p-3 redireccion-web" 
-                                href="https://riomarpaisajismo.com" 
-                                target="_blank">Riomar Paisajismo</a>
+                                href="https://ingenieriaelectricahl.com/" 
+                                target="_blank">Ingeniería eléctrica HL</a>
                                 <a 
                                 class="nav-link p-3 redireccion-web" 
                                 href="https://masterlimpio.com/" 
