--- a/index.html
+++ b/index.html
@@ -79,6 +79,9 @@
                                 href="servicios.html">Servicios</a>
                                 <a 
                                 class="nav-link p-3" 
+                                href="trabajosrealizados.html">Trabajos realizados</a>
+                                <a 
+                                class="nav-link p-3" 
                                 href="galery.html">Galería</a>
                                 <a 
                                 class="nav-link p-3" 
@@ -1102,7 +1105,7 @@
                     <div class="col-12 col-md-6 col-lg-4">
                         <div 
                         class="fb-page w-100" 
-                        data-href="https://www.facebook.com/AlbercasDelMarLC"
+                        data-href="https://www.facebook.com/AlbercasDelMarLC/"
                         data-tabs="timeline" 
                         data-width=""
                         data-height="" 
