--- a/galery.html
+++ b/galery.html
@@ -15,7 +15,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Inicio - Albercas del mar</title>
+    <title>Galería - Albercas del mar</title>
     <link rel="icon" type="image/png" href="img/logo/favicon.png">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
     <link rel="stylesheet" href="assets/bootstrap/bootstrap/dist/css/bootstrap.min.css">
@@ -68,11 +68,25 @@
                         <div class="collapse navbar-collapse d-lg-flex mx-auto ml-0im flex-wrap"
                             id="navbarNavAltMarkup">
                             <div id="navegacion-principal" class="navbar-nav text-uppercase mb-4 mx-auto">
-                                <a class="nav-link p-3 active" aria-current="page" href="index.html">Inicio</a>
-                                <a class="nav-link p-3" href="nosotros.html">¿Quiénes somos?</a>
-                                <a class="nav-link p-3" href="servicios.html">Servicios</a>
-                                <a class="nav-link p-3" href="galery.html">Galería</a>
-                                <a class="nav-link p-3" href="contacto.html">Contacto</a>
+                                <a 
+                                class="nav-link p-3 active" 
+                                aria-current="page" 
+                                href="index.html">Inicio</a>
+                                <a 
+                                class="nav-link p-3" 
+                                href="nosotros.html">¿Quiénes somos?</a>
+                                <a 
+                                class="nav-link p-3" 
+                                href="servicios.html">Servicios</a>
+                                <a 
+                                class="nav-link p-3" 
+                                href="trabajosrealizados.html">Trabajos realizados</a>
+                                <a 
+                                class="nav-link p-3" 
+                                href="galery.html">Galería</a>
+                                <a 
+                                class="nav-link p-3" 
+                                href="contacto.html">Contacto</a>
                             </div>
                             <div class="col-12 navbar-nav text-uppercase justify-content-center menu-paginas-web mb-4">
                                 <!-- Páginas web relacionadas -->
@@ -103,7 +117,7 @@
             </div>
         </div>
     </header>
-    <div class="pswp-gallery container my-5" id="gallery">
+    <div class="pswp-gallery container my-5 align-items-stretch" id="gallery">
 
         <div class="row col-12 col-md-4">
             <div class="pswp-gallery__item">
@@ -811,312 +825,6 @@
                 <div class="pswp-caption-content">
                     <p>Piscinas con cascada</p>
                 </div>
-            </div>
-        </div>
-        <!-- N  -->
-        <div class="row col-12 col-md-4">
-            <div class="pswp-gallery__item">
-                <a href="img/galeria/sin_texto/img_1.jpeg" data-pswp-width="2500" data-pswp-height="1668"
-                    target="_blank">
-                    <img src="img/galeria/sin_texto/img_1.jpeg"/>
-                </a>
-            </div>
-        </div>
-
-        <div class="row col-12 col-md-4">
-            <div class="pswp-gallery__item">
-                <a href="img/galeria/sin_texto/img_2.jpeg" data-pswp-width="2500" data-pswp-height="1668"
-                    target="_blank">
-                    <img src="img/galeria/sin_texto/img_2.jpeg"/>
-                </a>
-            </div>
-        </div>
-
-        <div class="row col-12 col-md-4">
-            <div class="pswp-gallery__item">
-                <a href="img/galeria/sin_texto/img_3.jpeg" data-pswp-width="2500" data-pswp-height="1668"
-                    target="_blank">
-                    <img src="img/galeria/sin_texto/img_3.jpeg"/>
-                </a>
-            </div>
-        </div>
-
-        <div class="row col-12 col-md-4">
-            <div class="pswp-gallery__item">
-                <a href="img/galeria/sin_texto/img_4.jpeg" data-pswp-width="2500" data-pswp-height="1668"
-                    target="_blank">
-                    <img src="img/galeria/sin_texto/img_4.jpeg"/>
-                </a>
-            </div>
-        </div>
-
-        <div class="row col-12 col-md-4">
-            <div class="pswp-gallery__item">
-                <a href="img/galeria/sin_texto/img_5.jpeg" data-pswp-width="2500" data-pswp-height="1668"
-                    target="_blank">
-                    <img src="img/galeria/sin_texto/img_5.jpeg"/>
-                </a>
-            </div>
-        </div>
-
-        <div class="row col-12 col-md-4">
-            <div class="pswp-gallery__item">
-                <a href="img/galeria/sin_texto/img_6.jpeg" data-pswp-width="2500" data-pswp-height="1668"
-                    target="_blank">
-                    <img src="img/galeria/sin_texto/img_6.jpeg"/>
-                </a>
-            </div>
-        </div>
-
-        <div class="row col-12 col-md-4">
-            <div class="pswp-gallery__item">
-                <a href="img/galeria/sin_texto/img_7.jpeg" data-pswp-width="2500" data-pswp-height="1668"
-                    target="_blank">
-                    <img src="img/galeria/sin_texto/img_7.jpeg"/>
-                </a>
-            </div>
-        </div>
-
-        <div class="row col-12 col-md-4">
-            <div class="pswp-gallery__item">
-                <a href="img/galeria/sin_texto/img_8.jpeg" data-pswp-width="2500" data-pswp-height="1668"
-                    target="_blank">
-                    <img src="img/galeria/sin_texto/img_8.jpeg"/>
-                </a>
-            </div>
-        </div>
-
-        <div class="row col-12 col-md-4">
-            <div class="pswp-gallery__item">
-                <a href="img/galeria/sin_texto/img_9.jpeg" data-pswp-width="2500" data-pswp-height="1668"
-                    target="_blank">
-                    <img src="img/galeria/sin_texto/img_9.jpeg"/>
-                </a>
-            </div>
-        </div>
-
-        <div class="row col-12 col-md-4">
-            <div class="pswp-gallery__item">
-                <a href="img/galeria/sin_texto/img_10.jpeg" data-pswp-width="2500" data-pswp-height="1668"
-                    target="_blank">
-                    <img src="img/galeria/sin_texto/img_10.jpeg"/>
-                </a>
-            </div>
-        </div>
-
-        <div class="row col-12 col-md-4">
-            <div class="pswp-gallery__item">
-                <a href="img/galeria/sin_texto/img_11.jpeg" data-pswp-width="2500" data-pswp-height="1668"
-                    target="_blank">
-                    <img src="img/galeria/sin_texto/img_11.jpeg"/>
-                </a>
-            </div>
-        </div>
-
-        <div class="row col-12 col-md-4">
-            <div class="pswp-gallery__item">
-                <a href="img/galeria/sin_texto/img_12.jpeg" data-pswp-width="2500" data-pswp-height="1668"
-                    target="_blank">
-                    <img src="img/galeria/sin_texto/img_12.jpeg"/>
-                </a>
-            </div>
-        </div>
-
-        <div class="row col-12 col-md-4">
-            <div class="pswp-gallery__item">
-                <a href="img/galeria/sin_texto/img_13.jpeg" data-pswp-width="2500" data-pswp-height="1668"
-                    target="_blank">
-                    <img src="img/galeria/sin_texto/img_13.jpeg"/>
-                </a>
-            </div>
-        </div>
-
-        <div class="row col-12 col-md-4">
-            <div class="pswp-gallery__item">
-                <a href="img/galeria/sin_texto/img_14.jpeg" data-pswp-width="2500" data-pswp-height="1668"
-                    target="_blank">
-                    <img src="img/galeria/sin_texto/img_14.jpeg"/>
-                </a>
-            </div>
-        </div>
-
-        <div class="row col-12 col-md-4">
-            <div class="pswp-gallery__item">
-                <a href="img/galeria/sin_texto/img_15.jpeg" data-pswp-width="2500" data-pswp-height="1668"
-                    target="_blank">
-                    <img src="img/galeria/sin_texto/img_15.jpeg"/>
-                </a>
-            </div>
-        </div>
-
-        <div class="row col-12 col-md-4">
-            <div class="pswp-gallery__item">
-                <a href="img/galeria/sin_texto/img_16.jpeg" data-pswp-width="2500" data-pswp-height="1668"
-                    target="_blank">
-                    <img src="img/galeria/sin_texto/img_16.jpeg"/>
-                </a>
-            </div>
-        </div>
-
-        <div class="row col-12 col-md-4">
-            <div class="pswp-gallery__item">
-                <a href="img/galeria/sin_texto/img_17.jpeg" data-pswp-width="2500" data-pswp-height="1668"
-                    target="_blank">
-                    <img src="img/galeria/sin_texto/img_17.jpeg"/>
-                </a>
-            </div>
-        </div>
-
-        <div class="row col-12 col-md-4">
-            <div class="pswp-gallery__item">
-                <a href="img/galeria/sin_texto/img_18.jpeg" data-pswp-width="2500" data-pswp-height="1668"
-                    target="_blank">
-                    <img src="img/galeria/sin_texto/img_18.jpeg"/>
-                </a>
-            </div>
-        </div>
-
-        <div class="row col-12 col-md-4">
-            <div class="pswp-gallery__item">
-                <a href="img/galeria/sin_texto/img_19.jpeg" data-pswp-width="2500" data-pswp-height="1668"
-                    target="_blank">
-                    <img src="img/galeria/sin_texto/img_19.jpeg"/>
-                </a>
-            </div>
-        </div>
-
-        <div class="row col-12 col-md-4">
-            <div class="pswp-gallery__item">
-                <a href="img/galeria/sin_texto/img_20.jpeg" data-pswp-width="2500" data-pswp-height="1668"
-                    target="_blank">
-                    <img src="img/galeria/sin_texto/img_20.jpeg"/>
-                </a>
-            </div>
-        </div>
-
-        <div class="row col-12 col-md-4">
-            <div class="pswp-gallery__item">
-                <a href="img/galeria/sin_texto/img_21.jpeg" data-pswp-width="2500" data-pswp-height="1668"
-                    target="_blank">
-                    <img src="img/galeria/sin_texto/img_21.jpeg"/>
-                </a>
-            </div>
-        </div>
-
-        <div class="row col-12 col-md-4">
-            <div class="pswp-gallery__item">
-                <a href="img/galeria/sin_texto/img_22.jpeg" data-pswp-width="2500" data-pswp-height="1668"
-                    target="_blank">
-                    <img src="img/galeria/sin_texto/img_22.jpeg"/>
-                </a>
-            </div>
-        </div>
-
-        <div class="row col-12 col-md-4">
-            <div class="pswp-gallery__item">
-                <a href="img/galeria/sin_texto/img_23.jpeg" data-pswp-width="2500" data-pswp-height="1668"
-                    target="_blank">
-                    <img src="img/galeria/sin_texto/img_23.jpeg"/>
-                </a>
-            </div>
-        </div>
-
-        <div class="row col-12 col-md-4">
-            <div class="pswp-gallery__item">
-                <a href="img/galeria/sin_texto/img_24.jpeg" data-pswp-width="2500" data-pswp-height="1668"
-                    target="_blank">
-                    <img src="img/galeria/sin_texto/img_24.jpeg"/>
-                </a>
-            </div>
-        </div>
-
-        <div class="row col-12 col-md-4">
-            <div class="pswp-gallery__item">
-                <a href="img/galeria/sin_texto/img_25.jpeg" data-pswp-width="2500" data-pswp-height="1668"
-                    target="_blank">
-                    <img src="img/galeria/sin_texto/img_25.jpeg"/>
-                </a>
-            </div>
-        </div>
-
-        <div class="row col-12 col-md-4">
-            <div class="pswp-gallery__item">
-                <a href="img/galeria/sin_texto/img_26.jpeg" data-pswp-width="2500" data-pswp-height="1668"
-                    target="_blank">
-                    <img src="img/galeria/sin_texto/img_26.jpeg"/>
-                </a>
-            </div>
-        </div>
-
-        <div class="row col-12 col-md-4">
-            <div class="pswp-gallery__item">
-                <a href="img/galeria/sin_texto/img_27.jpeg" data-pswp-width="2500" data-pswp-height="1668"
-                    target="_blank">
-                    <img src="img/galeria/sin_texto/img_27.jpeg"/>
-                </a>
-            </div>
-        </div>
-
-        <div class="row col-12 col-md-4">
-            <div class="pswp-gallery__item">
-                <a href="img/galeria/sin_texto/img_28.jpeg" data-pswp-width="2500" data-pswp-height="1668"
-                    target="_blank">
-                    <img src="img/galeria/sin_texto/img_28.jpeg"/>
-                </a>
-            </div>
-        </div>
-
-        <div class="row col-12 col-md-4">
-            <div class="pswp-gallery__item">
-                <a href="img/galeria/sin_texto/img_29.jpeg" data-pswp-width="2500" data-pswp-height="1668"
-                    target="_blank">
-                    <img src="img/galeria/sin_texto/img_29.jpeg"/>
-                </a>
-            </div>
-        </div>
-
-        <div class="row col-12 col-md-4">
-            <div class="pswp-gallery__item">
-                <a href="img/galeria/sin_texto/img_30.jpeg" data-pswp-width="2500" data-pswp-height="1668"
-                    target="_blank">
-                    <img src="img/galeria/sin_texto/img_30.jpeg"/>
-                </a>
-            </div>
-        </div>
-
-        <div class="row col-12 col-md-4">
-            <div class="pswp-gallery__item">
-                <a href="img/galeria/sin_texto/img_31.jpeg" data-pswp-width="2500" data-pswp-height="1668"
-                    target="_blank">
-                    <img src="img/galeria/sin_texto/img_31.jpeg"/>
-                </a>
-            </div>
-        </div>
-
-        <div class="row col-12 col-md-4">
-            <div class="pswp-gallery__item">
-                <a href="img/galeria/sin_texto/img_32.jpeg" data-pswp-width="2500" data-pswp-height="1668"
-                    target="_blank">
-                    <img src="img/galeria/sin_texto/img_32.jpeg"/>
-                </a>
-            </div>
-        </div>
-
-        <div class="row col-12 col-md-4">
-            <div class="pswp-gallery__item">
-                <a href="img/galeria/sin_texto/img_33.jpeg" data-pswp-width="2500" data-pswp-height="1668"
-                    target="_blank">
-                    <img src="img/galeria/sin_texto/img_33.jpeg"/>
-                </a>
-            </div>
-        </div>
-
-        <div class="row col-12 col-md-4">
-            <div class="pswp-gallery__item">
-                <a href="img/galeria/sin_texto/img_34.jpeg" data-pswp-width="2500" data-pswp-height="1668"
-                    target="_blank">
-                    <img src="img/galeria/sin_texto/img_34.jpeg"/>
-                </a>
             </div>
         </div>
 
