--- a/servicios.html
+++ b/servicios.html
@@ -84,6 +84,9 @@
                                 href="servicios.html">Servicios</a>
                                 <a 
                                 class="nav-link p-3" 
+                                href="trabajosrealizados.html">Trabajos realizados</a>
+                                <a 
+                                class="nav-link p-3" 
                                 href="galery.html">Galería</a>
                                 <a 
                                 class="nav-link p-3" 
