--- a/contacto.html
+++ b/contacto.html
@@ -94,26 +94,43 @@
                             </div>
                             <div class="col-12 navbar-nav text-uppercase justify-content-center menu-paginas-web mb-4">
                                 <!-- Páginas web relacionadas -->
-                                <a 
-                                class="nav-link p-3 redireccion-web" 
-                                href="https://construriomar.com/" 
-                                target="_blank">Constructora Riomar</a>
-                                <a 
-                                class="nav-link p-3 redireccion-web" 
-                                href="https://palapasriomar.com/" 
-                                target="_blank">Palapas Riomar</a>
-                                <a 
-                                class="nav-link p-3 redireccion-web" 
-                                href="https://ingenieriaelectricahl.com/" 
-                                target="_blank">Ingeniería eléctrica HL</a>
-                                <a 
-                                class="nav-link p-3 redireccion-web" 
-                                href="https://masterlimpio.com/" 
-                                target="_blank">Máster Limpio</a>
-                                <a 
-                                class="nav-link p-3 redireccion-web" 
-                                href="https://pozosriomar.com" 
-                                target="_blank">Pozos Rio Mar</a>
+                                <ul class="navbar-nav text-white">
+                                    <li class="d-flex align-items-center redireccion-web">
+                                        <i class="fa fa-globe"></i>
+                                        <a 
+                                        class="nav-link p-3" 
+                                        href="https://construriomar.com/" 
+                                        target="_blank">Constructora Riomar</a>
+                                    </li>
+                                    <li class="d-flex align-items-center redireccion-web">
+                                        <i class="fa fa-globe"></i>
+                                        <a 
+                                        class="nav-link p-3" 
+                                        href="https://palapasriomar.com/" 
+                                        target="_blank">Palapas Riomar</a>
+                                    </li>
+                                    <li class="d-flex align-items-center redireccion-web">
+                                        <i class="fa fa-globe"></i>
+                                        <a 
+                                        class="nav-link p-3" 
+                                        href="https://ingenieriaelectricahl.com/" 
+                                        target="_blank">Ingeniería eléctrica HL</a>
+                                    </li>
+                                    <li class="d-flex align-items-center redireccion-web">
+                                        <i class="fa fa-globe"></i>
+                                        <a 
+                                        class="nav-link p-3" 
+                                        href="https://masterlimpio.com/" 
+                                        target="_blank">Máster Limpio</a>
+                                    </li>
+                                    <li class="d-flex align-items-center redireccion-web">
+                                        <i class="fa fa-globe"></i>
+                                        <a 
+                                        class="nav-link p-3" 
+                                        href="https://pozosriomar.com" 
+                                        target="_blank">Pozos Rio Mar</a>
+                                    </li>
+                                </ul>
                             </div>
                         </div>
                     </div>
@@ -739,13 +756,6 @@
                             <a target="_blank" href="https://contenedoresdelmar.com/">
                                 <i class="fa fa-globe"></i>
                                 www.contenedoresdelmar.com
-                            </a>
-                        </li>
-                        <li>
-                            Ingeniería Eléctrica HL:<br>
-                            <a target="_blank" href="https://ingenieriaelectricahl.com/">
-                                <i class="fa fa-globe"></i>
-                                www.ingenieriaelectricahl.com
                             </a>
                         </li>
                         <li>
