se realizaron cambios en el formulario contacto, agregando el recaptcha.

--- a/contacto.html
+++ b/contacto.html
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="css/otrosEstilos.css">
     <link rel="stylesheet" href="css/estilosFormularioContacto.css"/>
     <link rel="stylesheet" href="css/spinnerCarga.css"/>
-    <link rel="stylesheet" href="/css/estilosReCaptcha.css"></link>
+    <link rel="stylesheet" href="css/estilosReCaptcha.css"></link>
     <link rel="stylesheet" href="assets/font-awesome-4.7.0/css/font-awesome.min.css">
     <script src="https://www.google.com/recaptcha/api.js"></script>
 </head>
